# cmake-cmocka-template

./: CMakeLists.txt  README.md
cmake/Modules/: AddMockedTest.cmake  FetchCMocka.cmake  static-analysis.cmake
include/: add3.h
src/: CMakeLists.txt  add.c  add3.c  module.c  module.h  program.c
test/: CMakeLists.txt  test_add.c  test_add3.c  test_add_internal.c  test_add_mock.c  test_module.c  test_module.h  utils.c  utils.h
